[package]
name    = "cjvalpy"
version = "0.3.2"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
homepage="https://github.com/hugoledoux/cjvalpy"
repository="https://github.com/hugoledoux/cjvalpy"
description = "The Python bindings of the official CityJSON validator"
readme = "README.md"
edition = "2021"

[dependencies]
cjval = "0.4.3"

[dependencies.pyo3]
version = "~0.16.0"
features = ["extension-module"]

[lib]
name = "cjvalpy"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.7"
requires-dist = ["toml==0.10.2"]
classifier=["License :: OSI Approved :: MIT License"]